# dundie-api

./: .gitignore  Dockerfile.dev  MANIFEST.in  Makefile  docker-compose.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py  start.sh  test.sh
docs/: README.md
dundie/: VERSION.txt  app.py  cli.py  config.py  db.py  default.toml  exc.py  middlewares.py  security.py
dundie/auth/: auth.py  functions.py  models.py
dundie/controllers/: __init__.py  post.py  transaction.py  user.py
dundie/models/: __init__.py  others.py  posts.py  shop.py  transaction.py  user.py
dundie/routes/: __init__.py  admin.py  auth.py  descriptions.py  others.py  post.py  shop.py  status.py  testing.py  transaction.py  user.py
dundie/serializers/: __init__.py  admin.py  others.py  post.py  shop.py  transaction.py  user.py
dundie/tasks/: user.py
dundie/templates/: __init__.py  password_reset_email.j2
dundie/utils/: andrelps_transactions.py  create_users.py  functions.py  status.py  utils.py
dundie/websocket/: chat.py
dundie/xpto/: constants.py  create_products.py  create_transactions.py  create_users.py  random_like_posts.py  random_posts.py  random_transactions.py
migrations/: env.py
migrations/versions/: 3372da74b65e_password.py  3541b89ecd5d_initial.py  494a0aa04350_liked_posts.py  57a2494264a9_tables_products_and_feedbacks.py  71e1a49d764f_user_model_refactor.py  760d6dfdefe7_criar_system_user.py  7e50aee29554_post_model.py  8c1eb267c42c_adicionado_o_campo_last_password_change_.py  90f358c6ac7e_is_active_and_private.py  91f7356420d1_user_model_refactor_v2.py  99e3d2e2cb55_initial.py  9bc8a425ce42_id_ge_0.py  a2e05109838a_transaction_e_balance.py  b4b7197cd292_product_order.py  d5d5b51e056f_orders.py  d75c10f91a26_id_ge_0.py  e919ac17f2e2_change_to_max_lenght.py  f213cf49a9d5_name_colum_feedback.py
postfix/: main.cf
postgres/: Dockerfile
