[tool.poetry]
name = "dundie"
version = "0.1.0"
description = "A rewards API for Dunder Mifflin"
authors = ["André Lopes <andrelopes.code@gmail.com>"]
readme = "docs/README.md"
license = "MIT"
homepage = 'https://github.com/andrelopes-code/dundie-api'
repository = 'https://github.com/andrelopes-code/dundie-api'
packages = [
    { include = "dundie" },
] 
include = ["dundie/**/*"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
typer = "^0.10.0"
dynaconf = "^3.2.5"
jinja2 = "^3.1.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^8.1.1"
ipython = "^8.22.2"
pip-tools = "^7.4.1"
pyright = "^1.1.355"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"   

[tool.poetry.scripts]
dundie = "dundie.cli:main"

[tool.pytest.ini_options]
testpaths = 'tests'
xfail_strict = true
filterwarnings = [
    'error',
    'ignore:path is deprecated.*:DeprecationWarning:',
]

[tool.coverage.run]
source = ['dundie']
branch = true
context = '${CONTEXT}'

[tool.coverage.report]
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    '@overload',
]

[tool.black]
color = true
line-length = 79
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
line_length = 79
known_first_party = 'dundie'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.flake8]
# Configurações do Flake8
max-line-length = 79
ignore = "E203, E266, E501, W503"
exclude = ".git, __pycache__, .venv, .eggs, *.egg"

[tool.mypy]
# temporarily ignore some files
# exclude = 'foo/(zaz|bar)\.py'
python_version = '3.10'
show_error_codes = true
follow_imports = 'silent'
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[tool.pyright]
ignore = [
    "**/__pycache__",
    "**/node_modules",
    "**/.venv",
    "**/.eggs",
    "**/*.egg",
    "**/migrations",
]
